correct/wrong color change to black

--- a/client/src/containers/MapContainer.css
+++ b/client/src/containers/MapContainer.css
@@ -165,6 +165,10 @@ path {
     color: black;
 }
 
+.question-answered >h5 {
+    color: black;
+}
+
 .accordion-button:not(.collapsed)::after {
     background-image: none;
 }
